--- a/trello-frontend/package.json
+++ b/trello-frontend/package.json
@@ -11,6 +11,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "socket.io-client": "^3.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
