--- a/trello-backend/package.json
+++ b/trello-backend/package.json
@@ -5,13 +5,15 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Debjit",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "heroku": "^7.47.12",
     "mongoose": "^5.11.15",
     "nodemon": "^2.0.7",
     "socket.io": "^3.1.1"
