--- a/trello-backend/package.json
+++ b/trello-backend/package.json
@@ -17,5 +17,8 @@
     "mongoose": "^5.11.15",
     "nodemon": "^2.0.7",
     "socket.io": "^3.1.1"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
